k8s/doctor-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: doctor-service
  template:
    metadata:
      labels:
        app: doctor-service
    spec:
      containers:
        - name: doctor-service
          image: doctor-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
          readinessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 20
            periodSeconds: 20
