k8s/ai-symptom-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-symptom-deployment
  labels:
    app: ai-symptom-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ai-symptom-service
  template:
    metadata:
      labels:
        app: ai-symptom-service
    spec:
      containers:
        - name: ai-symptom-service
          image: ai-symptom-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5006
---
apiVersion: v1
kind: Service
metadata:
  name: ai-symptom-service
spec:
  selector:
    app: ai-symptom-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006
      nodePort: 30006
