k8s/doctor-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doctor-service
spec:
  selector:
    app: doctor-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
  type: ClusterIP
