k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
  labels:
    app: notification-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: notification-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
      nodePort: 30005
