k8s/patient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  type: NodePort
  selector:
    app: patient-service
  ports:
    - port: 5002
      targetPort: 5002
      nodePort: 30002
