k8s/telemedicine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemedicine-deployment
  labels:
    app: telemedicine-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: telemedicine-service
  template:
    metadata:
      labels:
        app: telemedicine-service
    spec:
      containers:
        - name: telemedicine-service
          image: telemedicine-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: telemedicine-service
spec:
  selector:
    app: telemedicine-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
      nodePort: 30004
